# echoblind

./: .clang-format  .gitignore  CMakeLists.txt  pyproject.toml  vcpkg.json
.github/workflows/: build.yml
cmake/: deploy_test.cmake  qxlsx.cmake
echoblind/: __main__.py
echoblind/echotypes/: __init__.py
echoblind/rack/: configreader.py  configwriter.py  detector.py  eacp.py  epcp.py
include/echoconfig/: Circuit.h  Config.h  EchoAcpConfig.h  EchoPcpConfig.h  Preset.h  Space.h  sheet_helpers.h  xml_helpers.h
install/: CMakeLists.txt
src/: CMakeLists.txt  echoblind_config.h
src/echoblind/: CMakeLists.txt  FileSelectorWidget.cpp  FileSelectorWidget.h  MainWindow.cpp  MainWindow.h  Settings.h  main.cpp
src/echoconfig/: CMakeLists.txt  Config.cpp  EchoAcpConfig.cpp  EchoPcpConfig.cpp  sheet_helpers.cpp  xml_helpers.cpp
test/: CMakeLists.txt
test/echoconfig/: CMakeLists.txt  EchoAcpConfigTest.cpp  EchoPcpConfigTest.cpp  XlsxMatcher.h  genLevelsMap.h  qbytearray_tostring.h  qstring_tostring.h
test/echoconfig/resources/EchoAcpConfigTest/: EACP.eacp  EACP.xlsx  EACP_changed.eacp  EACP_changed.xlsx
test/echoconfig/resources/EchoPcpConfigTest/: ERP.cfg  ERP_changed.cfg  ERP_changed.xlsx  erp.xlsx
