[project]
name = "echoblind"
version = "0.1.0"
description = ""
authors = [
    {name = "Dan Keenan",email = "dk@dankeenan.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyexcel (>=0.7.3,<0.8.0)",
    "pyexcel-ods (>=0.6.0,<0.7.0)",
    "bidict (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
